@@ -7,6 +7,7 @@ New features
 Bug fixes
 ~~~~~~~~~
 - #2326: fixed braindatamodel for file/image row widgets
+- #2234: depend on the new image widget
 New internal features
 ~~~~~~~~~~~~~~~~~~~~~
 - 
